fix nav and footer margin and overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ nav {
   grid-area: nav;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; 
   text-align: center;
   background-color: #4949de;
   color: #ffffff;
@@ -20,13 +20,14 @@ nav {
 }
 menu {
   grid-area: menu;
-  height: 92vh;
+  width:10vw ;
   margin-left: 2rem;
-  font-size: 1.4rem;
+  height: auto;
 }
 main {
   grid-area: main;
-  width: 85vw;
+  width: auto;
+  height: auto;
 }
 footer {
   grid-area: footer;
@@ -35,11 +36,11 @@ footer {
   align-items: center;
   text-align: center;
   background-color: #f5f5f5;
-  height: 2vh;
+  height: 4vh;
 }
 .grid-main-container {
   display: grid;
-  gap: 1rem;
+ 
   height: 100vh;
   grid-template-areas:
     "nav nav"
@@ -50,11 +51,14 @@ footer {
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(3, 1fr);
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 .flex-menu {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding-top: 1rem;
 }
 .flex-item-menu {
   display: flex;
@@ -71,9 +75,16 @@ footer {
   align-items: center;
   text-align: center;
   background-color: #ffffff;
+  width: 20rem;
+}
+.flex-card img {
+  width: 20rem;
+  max-width: 100%;
 }
 .flex-card button {
   background-color: #4949de;
   color: #ffffff;
-  padding: 1rem 12rem 1rem 12rem;
+  width: 20rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
